--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --verbose",
     "lint": "eslint ."
   },
   "repository": {
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/Chappydev/fullstackopen-part4#readme",
   "devDependencies": {
     "eslint": "^8.23.0",
+    "jest": "^29.0.3",
     "nodemon": "^2.0.19"
   },
   "dependencies": {
@@ -28,5 +29,8 @@
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "mongoose": "^6.6.0"
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
